--- a/3-projects/task-manager-gui/task-manager-web-app/package.json
+++ b/3-projects/task-manager-gui/task-manager-web-app/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-redux": "^7.0.3",
+    "react-scripts": "^3.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "browserslist": [
     ">0.2%",
