--- a/3-projects/task-manager-gui/task-manager-web-app/package.json
+++ b/3-projects/task-manager-gui/task-manager-web-app/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.0.3",
     "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "browserslist": [
