--- a/3-projects/task-manager-gui/task-manager-web-app/package.json
+++ b/3-projects/task-manager-gui/task-manager-web-app/package.json
@@ -4,7 +4,8 @@
   "description": "A React based application for the list of daily to do tasks.",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "start:prod": "serve -s ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -13,6 +14,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
